# WebApplication

./: README.md  main.py  pyproject.toml
sites/: categories.html  contacts.html  home.html  orders.html
